--- a/MoodMinder/package.json
+++ b/MoodMinder/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-is": "16.8",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.13.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-web": "~0.19.6",
     "styled-components": "^5.0.0"
