--- a/MoodMinder/package.json
+++ b/MoodMinder/package.json
@@ -12,7 +12,9 @@
     "@expo-google-fonts/dm-sans": "^0.2.3",
     "@expo-google-fonts/dm-serif-display": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@unform/core": "^2.1.6",
     "expo": "~49.0.15",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
@@ -26,6 +28,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
     "styled-components": "^5.0.0"
   },
