--- a/MoodMinder/front/vite/package.json
+++ b/MoodMinder/front/vite/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@material/slider": "^14.0.0",
     "@mui/material": "^5.14.17",
+    "axios": "^1.6.1",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
