--- a/MoodMinder/front/vite/package.json
+++ b/MoodMinder/front/vite/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.17",
     "axios": "^1.6.1",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
