--- a/MoodMinder/front/vite/package.json
+++ b/MoodMinder/front/vite/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@material/slider": "^14.0.0",
     "@mui/material": "^5.14.17",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.1",
     "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
