--- a/MoodMinder/front/vite/package.json
+++ b/MoodMinder/front/vite/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material/slider": "^14.0.0",
+    "@mui/lab": "^5.0.0-alpha.154",
     "@mui/material": "^5.14.17",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.1",
