--- a/MoodMinder/front/vite/package.json
+++ b/MoodMinder/front/vite/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.17",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
